--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,100 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-python-multipart==0.0.6
-Pillow==10.1.0
-requests==2.31.0
-python-dotenv==1.0.0
-pydantic==2.5.0
 aiofiles==23.2.0
-httpx==0.25.2
-google-genai
+alembic==1.13.1
+annotated-types==0.7.0
+anyio==3.7.1
+appnope==0.1.4
+asttokens==3.0.0
+async-timeout==5.0.1
+asyncpg==0.29.0
+Bottleneck==1.5.0
+cachetools==5.5.2
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
+comm==0.2.3
+debugpy==1.8.16
+decorator==5.2.1
+docstring_parser==0.17.0
+executing==2.2.0
+fastapi==0.104.1
+google-api-core==2.25.1
+google-auth==2.40.3
+google-cloud-aiplatform==1.109.0
+google-cloud-bigquery==3.35.1
+google-cloud-core==2.4.3
+google-cloud-resource-manager==1.14.2
+google-cloud-storage==2.19.0
+google-crc32c==1.7.1
+google-genai==1.2.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+grpc-google-iam-v1==0.14.2
+grpcio==1.74.0
+grpcio-status==1.74.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.0
+httpx-sse==0.4.1
+idna==3.10
+ipykernel==6.30.1
+ipython==9.4.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+langchain-core==0.3.74
+langchain-google-vertexai==2.0.28
+langsmith==0.4.14
+Mako==1.3.10
+MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
+numexpr==2.11.0
+numpy==2.3.2
+orjson==3.11.2
+packaging==25.0
+parso==0.8.4
+pexpect==4.9.0
+Pillow==10.1.0
+platformdirs==4.3.8
+prompt_toolkit==3.0.51
+proto-plus==1.26.1
+protobuf==6.31.1
+psutil==7.0.0
+psycopg2-binary==2.9.9
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.10.4
+pydantic-settings==2.10.1
+pydantic_core==2.27.2
+Pygments==2.19.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+python-multipart==0.0.6
+PyYAML==6.0.2
+pyzmq==27.0.1
+requests==2.31.0
+requests-toolbelt==1.0.0
+rsa==4.9.1
+shapely==2.1.1
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.43
+stack-data==0.6.3
+starlette==0.27.0
+tenacity==9.1.2
+tornado==6.5.2
+traitlets==5.14.3
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+urllib3==2.5.0
+uvicorn==0.24.0
+validators==0.35.0
+wcwidth==0.2.13
+websockets==14.2
+zstandard==0.23.0
